examples/errors/oop_method_not_found.vut
class Student() {
}

let s = Student()
s.eat()
